# gtfs-rt-alerts-translation-lambda

./: .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml  template.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
docs/plans/: 2026-02-03-feat-create-terraform-module-plan.md  2026-02-04-feat-terraform-example-temporary-flag-plan.md  2026-02-12-feat-stop-name-placeholder-substitution-plan.md  2026-02-20-fix-translation-gathering-plan.md
docs/solutions/best-practices/: hybrid-trigger-lambda-pattern-20260203.md  translator-interface-pattern-20260203.md
docs/solutions/build-errors/: botocore-region-required-ci-20260203.md  mypy-collection-indexing-20260204.md
docs/solutions/developer-experience/: agents-md-architecture-sync-20260225.md  fetcher-module-extraction-20260203.md
docs/solutions/integration-issues/: language-code-mapping-smartling-20260220.md  service-effect-translation-reuse-20260223.md  smartling-locale-authorization-20260223.md
docs/solutions/patterns/: critical-patterns.md
docs/solutions/runtime-errors/: translation-timeout-resilience-20260224.md  whitespace-translation-reuse-20260223.md
docs/solutions/workflow-issues/: build-workflow-trigger-ci-dependency-20260203.md
gtfs_translation/: config.py  lambda_handler.py
gtfs_translation/core/: fetcher.py  processor.py  smartling.py  translator.py
gtfs_translation/proto/: gtfs_realtime_pb2.pyi
scripts/: run_local.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/example/: main.tf  terraform.tfvars.example
terraform/tests/: trigger_validation.tftest.hcl
tests/integration/: test_job_batches.py  test_smartling.py
tests/unit/: test_cause_effect_detail.py  test_lambda_handler.py  test_language_mapping.py  test_migration_esla_to_es419.py  test_processor.py  test_processor_es419.py  test_translation_timeout.py
todos/: 006-complete-p2-decode-s3-event-key.md
