[project]
name = "gtfs-alerts-translation-lambda"
version = "0.1.0"
description = "Translates GTFS-RT ServiceAlerts feeds using Smartling"
readme = "README.md"
authors = [{ name = "Paul Swartz", email = "spwratz@mbta.com" }]
requires-python = ">=3.13"
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "boto3>=1.34.0",
    "boto3-stubs[lambda,s3]>=1.34.0",
    "mypy>=1.8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.15.1",
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "types-protobuf>=4.24.0",
    "vcrpy>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.uv]
package = false
