[project]
name = "gtfs-rt-alerts-translation-lambda"
version = "0.7.0"
description = "Translates GTFS-RT ServiceAlerts feeds using Smartling"
readme = "README.md"
authors = [{ name = "Paul Swartz", email = "pswartz@mbta.com" }]
requires-python = ">=3.13"
dependencies = [
    "protobuf>=4.24.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "boto3>=1.42.83",
    "boto3-stubs[lambda,s3]>=1.34.0",
    "grpcio-tools>=1.60.0",
    "mypy>=1.8.0",
    "mypy-protobuf>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.15.1",
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "types-protobuf>=4.24.0",
    "vcrpy>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["gtfs_translation/proto/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["gtfs_translation/proto/"]

[[tool.mypy.overrides]]
module = "gtfs_translation.proto.*"
ignore_errors = true

[tool.uv]
package = false
